Native bitwise operators using a `b` prefix (`b&` for `bitwiseAnd`, etc.)